4-apache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: apache
