7-ingress-apache-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudlyy-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
#    traefik.ingress.kubernetes.io/router.middlewares: default-keycloak-auth@kubernetescrd
spec:
  rules:
    - host: cloudlyy.com
      http:
        paths:
          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - path: /apache
            pathType: Prefix
            backend:
              service:
                name: apache
                port:
                  number: 80
