9-traefik-ingress-acm.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:977098995238:certificate/1d23a4d3-9e56-4e28-b4ef-e02d3dc9866e  # Replace with your ACM certificate ARN
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301" }}'
spec:
  rules:
    - host: cloudlyy.com  # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 443
  # tls:
  #   - hosts:
  #       - cloudlyy.com
  #     secretName: cloudlyy-tls  # Optional: Only if using Kubernetes secrets for TLS
